--- a/public/site/homepage.html
+++ b/public/site/homepage.html
@@ -31,6 +31,8 @@
         </ul>
     </div>
 </nav>
-<h1 style="text-align: center">LingoJive Homepage</h1>
+<h1 style="text-align: center; text-size: 31px; border-color: Blue">LingoJive Homepage</h1>
+<img src = "../Picture/multiplelanguages.jpeg" height = "100px" length = "100px" align = "center" alt = "Multiple langauges">
+<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time with your international friends for the first time!!!</p>
 </body>
 </html>
